# Path-Admin-Bot

./: .env-template  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: config.py  keyboards.py  main.py  utils.py
app/database/: db_config.py  models.py
compose/: Dockerfile  entrypoint.sh
migrations/: env.py
migrations/versions/: 001_meetings.py  002_reminder_markers.py  003_date_timezone.py
